--- a/Code/ShipWorks.Installer/Views/LocationConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/LocationConfig.xaml
@@ -30,7 +30,8 @@
             </StackPanel>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1">
-            <Button Style="{StaticResource SmallPrimaryButton}" Margin="10" Command="{Binding NextCommand}" IsDefault="True">Next</Button>
+            <Button Style="{StaticResource SmallSecondaryButton}">Back</Button>
+            <Button Style="{StaticResource SmallPrimaryButton}" Margin="10,0,20,0" Command="{Binding NextCommand}" IsDefault="True">Next</Button>
             <Button Style="{StaticResource SmallSecondaryButton}" Margin="10" IsCancel="True">Cancel</Button>
         </StackPanel>
     </Grid>
