--- a/Code/ShipWorks.Installer/Views/Login.xaml
+++ b/Code/ShipWorks.Installer/Views/Login.xaml
@@ -47,6 +47,9 @@
             </Hyperlink>
         </TextBlock>
 
-        <Button Style="{StaticResource SmallSecondaryButton}" Grid.Row="6" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10">Cancel</Button>
+        <StackPanel Margin="10" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
+            <Button Style="{StaticResource SmallSecondaryButton}" Margin="0,0,10,0">Back</Button>
+            <Button Style="{StaticResource SmallSecondaryButton}">Cancel</Button>
+        </StackPanel>
     </Grid>
 </Page>
