--- a/Code/ShipWorks.Installer/Views/Eula.xaml
+++ b/Code/ShipWorks.Installer/Views/Eula.xaml
@@ -5,11 +5,16 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:convert="clr-namespace:ShipWorks.Installer.ValueConverters"
     Title="EULA"
     d:DesignHeight="600"
     d:DesignWidth="300"
     DataContext="{Binding Path=EulaViewModel, Source={StaticResource Locator}}"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    x:Name="EulaPage">
+    <Page.Resources>
+        <convert:PercentageConverter x:Key="PercentageConverter"/>
+    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -19,7 +24,11 @@
             <TextBlock Text="EULA" FontSize="20"/>
             <TextBlock Text="Accept our EULA:" FontSize="15" Margin="0,10,0,0"/>
             <RichTextBox  Margin="0,20,0,0"
-                          Height="380"
+                           Height="{Binding 
+                                    Converter={StaticResource PercentageConverter}, 
+                                    ElementName=EulaPage, 
+                                    Path=ActualHeight, 
+                                    ConverterParameter=.75}"
                           x:Name="eulaTextBox" />
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1">
