--- a/Code/ShipWorks.Installer/Views/Warning.xaml
+++ b/Code/ShipWorks.Installer/Views/Warning.xaml
@@ -6,16 +6,27 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Warning"
-    Width="300"
-    Height="300"
     d:DesignHeight="300"
     d:DesignWidth="300"
     DataContext="{Binding Path=WarningViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid>
         <StackPanel>
-            <TextBlock Text="Warning" />
-            <Button Command="{Binding NextCommand}" Content="Next" />
+            <TextBlock Text="Oops! ShipWorks had a problem installing:"/>
+            <TextBlock Text="{Binding Warning}" Margin="0,10"/>
+            <TextBlock TextWrapping="Wrap">
+            Please contact a ShipWorks representative at 999-999-9999 or via our 
+            <Hyperlink>
+                website
+            </Hyperlink>
+            to resolve this issue
+            </TextBlock>
         </StackPanel>
+        <Button Style="{StaticResource SmallSecondaryButton}" 
+                Margin="10"
+                VerticalAlignment="Bottom" 
+                HorizontalAlignment="Right">
+            Close
+        </Button>
     </Grid>
 </Page>
