TP #5: Fix loading spinner not showing on install pages

--- a/Code/ShipWorks.Installer/App.xaml
+++ b/Code/ShipWorks.Installer/App.xaml
@@ -22,6 +22,7 @@
             </Style>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/ShipWorks.Installer;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
+                <ResourceDictionary Source="/ShipWorks.Installer;component/Themes/Controls/WaitSpinner.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
