--- a/Code/ShipWorks.Installer/Themes/Controls/WaitSpinner.xaml
+++ b/Code/ShipWorks.Installer/Themes/Controls/WaitSpinner.xaml
@@ -20,12 +20,13 @@
                                                       Path=BorderThickness}"
                             Padding="{TemplateBinding Padding}">
                         <StackPanel>
-                            <Image Width="24"
-                                   Height="24"
+                            
+                            <Image Width="50"
+                                   Height="50"
                                    HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
                                    RenderTransformOrigin=".5,.5"
-                                   Source="/Shipworks.Core;component/Resources/Progress/circle_ball_blue.gif">
+                                   Source="/Shipworks.Installer;component/Resources/loading_spinner.png">
                                 <Image.RenderTransform>
                                     <RotateTransform x:Name="AnimatedRotateTransform" Angle="0" />
                                 </Image.RenderTransform>
@@ -34,7 +35,7 @@
                                         <BeginStoryboard>
                                             <Storyboard>
                                                 <DoubleAnimation By="10"
-                                                                 Duration="0:0:1"
+                                                                 Duration="0:0:2"
                                                                  RepeatBehavior="Forever"
                                                                  Storyboard.TargetName="AnimatedRotateTransform"
                                                                  Storyboard.TargetProperty="Angle"
