--- a/Code/ShipWorks.Installer/Views/Login.xaml
+++ b/Code/ShipWorks.Installer/Views/Login.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:c="clr-namespace:ShipWorks.Installer.Controls"
     Title="Login"
     d:DesignHeight="300"
     d:DesignWidth="300"
@@ -29,10 +30,10 @@
         <TextBlock Text="Welcome to ShipWorks! Lets get you setup." Grid.ColumnSpan="4" HorizontalAlignment="Center" Margin="0,10"/>
         
         <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="1" Grid.Column="1" Text="Username" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Style="{StaticResource BlueSteelTextBox}" Grid.Row="1" Grid.Column="2" Width="150" VerticalAlignment="Center"/>
+        <TextBox Style="{StaticResource BlueSteelTextBox}" Grid.Row="1" Grid.Column="2" Width="150" VerticalAlignment="Center" Text="{Binding Username}"/>
 
         <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="2" Grid.Column="1" Text="Password" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Style="{StaticResource BlueSteelTextBox}" Grid.Row="2" Grid.Column="2" Width="150" VerticalAlignment="Center"/>
+        <c:BindablePasswordBox Grid.Row="2" Grid.Column="2" Width="150" VerticalAlignment="Center" Password="{Binding Password, Mode=OneWayToSource}"/>
                 
         <Button Style="{StaticResource SmallButton}" Grid.Column="2" Grid.Row="3" Command="{Binding NextCommand}" Content="Sign In" HorizontalAlignment="Center" Width="150" Margin="0,10"/>
         
