--- a/Code/ShipWorks.Installer/Views/Eula.xaml
+++ b/Code/ShipWorks.Installer/Views/Eula.xaml
@@ -23,8 +23,10 @@
         <StackPanel>
             <TextBlock Text="EULA" FontSize="20"/>
             <TextBlock Text="Accept our EULA:" FontSize="15" Margin="0,10,0,0"/>
-            <RichTextBox  Margin="0,20,0,0"
-                           Height="{Binding 
+            <RichTextBox  Margin="0,20,0,0" 
+                          IsReadOnly="True"
+                          IsDocumentEnabled="True"
+                          Height="{Binding 
                                     Converter={StaticResource PercentageConverter}, 
                                     ElementName=EulaPage, 
                                     Path=ActualHeight, 
