--- a/Code/ShipWorks.Installer/Views/Login.xaml
+++ b/Code/ShipWorks.Installer/Views/Login.xaml
@@ -9,7 +9,7 @@
     xmlns:convert="clr-namespace:ShipWorks.Installer.ValueConverters"
     Title="Login"
     d:DesignHeight="300"
-    d:DesignWidth="300"
+    d:DesignWidth="320"
     DataContext="{Binding Path=LoginViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
 
@@ -20,8 +20,8 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="130"/>
+            <ColumnDefinition Width="190"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -54,7 +54,7 @@
             </Hyperlink>
         </TextBlock>
 
-        <TextBlock Foreground="Red" Text="{Binding Error}" Visibility="{Binding Error, Converter={StaticResource IsEmptyConverter}}" Grid.Column="2" Grid.Row="6" HorizontalAlignment="Center" TextWrapping="Wrap" />
+        <TextBlock Foreground="Red" Text="{Binding Error}" Visibility="{Binding Error, Converter={StaticResource IsEmptyConverter}}" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="6" HorizontalAlignment="Center" TextWrapping="Wrap" />
 
         <StackPanel Margin="10" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
             <Button Style="{StaticResource SmallSecondaryButton}" Command="{Binding BackCommand}" Margin="0,0,10,0">Back</Button>
