--- a/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
@@ -43,7 +43,7 @@
                          Foreground="{Binding ConnectionIcon, Converter={StaticResource IconToBrushConverter}}" 
                          Grid.Column="1" 
                          VerticalAlignment="Center"/>
-                <TextBlock Style="{StaticResource FieldLabel}" Text="{Binding SelectedText}" VerticalAlignment="Center" Margin="10,0"/>
+                <TextBlock Style="{StaticResource FieldLabel}" Text="{Binding ConnectionStatusText}" VerticalAlignment="Center" Margin="10,0"/>
             </StackPanel>
             <ListView Height="150" Margin="0,10,0,20" ItemsSource="{Binding Databases}" x:Name="DatabaseView" SelectedItem="{Binding SelectedDatabase}">
                 <ListView.Resources>
