TP #5: Fix database list losing binding to selected database and some code review changes

--- a/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
@@ -45,7 +45,7 @@
                          VerticalAlignment="Center"/>
                 <TextBlock Style="{StaticResource FieldLabel}" Text="{Binding ConnectionStatusText}" VerticalAlignment="Center" Margin="10,0"/>
             </StackPanel>
-            <ListView Height="150" Margin="0,10,0,20" ItemsSource="{Binding Databases}" x:Name="DatabaseView" SelectedItem="{Binding SelectedDatabase}">
+            <ListView Height="150" Margin="0,10,0,20" ItemsSource="{Binding Databases}" x:Name="DatabaseView" SelectedIndex="{Binding SelectedDatabaseIndex}">
                 <ListView.Resources>
                     <DataTemplate x:Key="Name">
                         <TextBlock HorizontalAlignment="Left" 
