--- a/Code/ShipWorks.Installer/Views/LocationConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/LocationConfig.xaml
@@ -14,7 +14,7 @@
         <StackPanel>
             <TextBlock Style="{StaticResource Header}" Text="Select your desired warehouse for this installation:" />
             <TextBlock Text="Selecting your warehouse links it with your database, for faster setup across multiple sites."  TextWrapping="Wrap" FontSize="10" Margin="0,10,0,0"/>
-            <ComboBox Style="{StaticResource FormComboBox}" Margin="0,10,0,0" Width="200" HorizontalAlignment="Left"/>
+            <ComboBox Style="{StaticResource FormComboBox}" Margin="0,10,0,0" Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Path=WarehouseList}" DisplayMemberPath="Details.Name" SelectedValuePath="ID" SelectedItem="{Binding SelectedWarehouse, Mode=TwoWay}"/>
             <TextBlock Margin="0,20,0,0">
                 Need to enable remote connections? 
                 <Hyperlink NavigateUri="hub.shipworks.com">
