--- a/Code/ShipWorks.Installer/Views/Login.xaml
+++ b/Code/ShipWorks.Installer/Views/Login.xaml
@@ -44,12 +44,12 @@
         <Button Style="{StaticResource SmallButton}" Grid.Column="2" Grid.Row="3" Command="{Binding NextCommand}" Content="Sign In" HorizontalAlignment="Center" Width="150" Margin="0,10"/>
         
         <TextBlock Grid.Column="2" Grid.Row="4" HorizontalAlignment="Center">
-            <Hyperlink NavigateUri="https://www.interapptive.com/">
+            <Hyperlink Command="{Binding NoAccountCommand}">
                 I don't have a ShipWorks account
             </Hyperlink>
         </TextBlock>
         <TextBlock Grid.Column="2" Grid.Row="5" HorizontalAlignment="Center" Margin="0,10">
-            <Hyperlink NavigateUri="https://www.interapptive.com/">
+            <Hyperlink Command="{Binding ForgotPasswordCommand}">
                 I forgot my password
             </Hyperlink>
         </TextBlock>
