--- a/Code/ShipWorks.Installer/Views/InstallDatabase.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallDatabase.xaml
@@ -6,6 +6,7 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:c="clr-namespace:ShipWorks.Installer.Controls"
+    xmlns:fa5="http://schemas.fontawesome.com/icons/"
     Title="InstallDatabase"
     d:DesignHeight="300"
     d:DesignWidth="300"
@@ -14,7 +15,15 @@
     <Grid>
         <StackPanel>
             <TextBlock Text="Installing SQL directories..." />
-            <c:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>
+            <fa5:FontAwesome Icon="Solid_Spinner"
+                         FontSize="40"
+                         Foreground="#2A67AB" 
+                         Grid.Column="1" 
+                         VerticalAlignment="Center" 
+                         HorizontalAlignment="Left"
+                         Margin="40,4,0,0"
+                         Spin="True"
+                         SpinDuration="1.5"/>
             <TextBlock Text="Your database instance can go up to 10GB in size, so you don't need to worry about running our of space any time soon." TextWrapping="Wrap" Margin="0,10"/>
             <TextBlock Text="It just Works." Margin="0,10"/>
             <Button Command="{Binding NextCommand}" Content="Next" Margin="0,100,0,0"/>
