--- a/Code/ShipWorks.Installer/Views/InstallShipworks.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallShipworks.xaml
@@ -27,7 +27,7 @@
                          SpinDuration="1.5"/>
             <TextBlock Text="Did you know we can print labels at a speed of X per second?" TextWrapping="Wrap" Margin="0,10"/>
             <TextBlock Text="That Works." Margin="0,10"/>
-            <Button Command="{Binding NextCommand}" Content="Next" Margin="0,100,0,0"/>
+            <Button Command="{Binding NextCommandAsync}" Content="Next" Margin="0,100,0,0"/>
         </StackPanel>
     </Grid>
 </Page>
