--- a/Code/ShipWorks.Installer/Views/UpgradeShipWorks.xaml
+++ b/Code/ShipWorks.Installer/Views/UpgradeShipWorks.xaml
@@ -5,9 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:c="clr-namespace:ShipWorks.Installer.Controls"
     Title="UpgradeShipWorks"
-    Width="300"
-    Height="300"
     d:DesignHeight="300"
     d:DesignWidth="300"
     DataContext="{Binding Path=UpgradeShipWorksViewModel, Source={StaticResource Locator}}"
@@ -15,7 +14,10 @@
     <Grid>
         <StackPanel>
             <TextBlock Text="UpgradeShipWorks" />
-            <Button Command="{Binding NextCommand}" Content="Next" />
+            <c:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>
+            <TextBlock Text="Did you know we can print labels at a speed of X per second?" TextWrapping="Wrap" Margin="0,10"/>
+            <TextBlock Text="That Works." Margin="0,10"/>
+            <Button Command="{Binding NextCommand}" Content="Next" Margin="0,100,0,0"/>
         </StackPanel>
     </Grid>
 </Page>
