--- a/Code/ShipWorks.UI/Dialogs/QuickStart/QuickStart.xaml
+++ b/Code/ShipWorks.UI/Dialogs/QuickStart/QuickStart.xaml
@@ -1,10 +1,9 @@
-<ui:InteropWindow  xmlns:ui="clr-namespace:Interapptive.Shared.UI;assembly=Interapptive.Shared"
-                   x:Class="ShipWorks.UI.Dialogs.QuickStart.QuickStart"
+<ui:InteropWindow xmlns:ui="clr-namespace:Interapptive.Shared.UI;assembly=Interapptive.Shared"
+        x:Class="ShipWorks.UI.Dialogs.QuickStart.QuickStart"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:ShipWorks.UI.Dialogs.QuickStart" xmlns:icons="clr-namespace:ShipWorks.UI.Icons"
         mc:Ignorable="d"
         SizeToContent="Height"
         Width="1000"
@@ -128,7 +127,7 @@
         </Grid>
         <TextBlock Grid.Row="2" Style="{StaticResource Subheader}" Margin="0 0 0 50">
             For additional information, visit our
-            <Hyperlink Click="OnMoreInformationLinkClick" Foreground="#4a4a4a">knowledgebase</Hyperlink>
+            <Hyperlink Foreground="#4a4a4a">knowledgebase</Hyperlink>
         </TextBlock>          
     </Grid>
 </ui:InteropWindow>
