--- a/Code/ShipWorks.Installer/Views/UpgradeShipWorks.xaml
+++ b/Code/ShipWorks.Installer/Views/UpgradeShipWorks.xaml
@@ -6,6 +6,7 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:c="clr-namespace:ShipWorks.Installer.Controls"
+    xmlns:fa5="http://schemas.fontawesome.com/icons/"
     Title="UpgradeShipWorks"
     d:DesignHeight="300"
     d:DesignWidth="300"
@@ -13,11 +14,19 @@
     mc:Ignorable="d">
     <Grid>
         <StackPanel>
-            <TextBlock Text="UpgradeShipWorks" />
-            <c:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>
+            <TextBlock Text="Upgrading ShipWorks" />
+            <fa5:FontAwesome Icon="Solid_Spinner"
+                         FontSize="40"
+                         Foreground="#2A67AB" 
+                         Grid.Column="1" 
+                         VerticalAlignment="Center" 
+                         HorizontalAlignment="Left"
+                         Margin="40,4,0,0"
+                         Spin="True"
+                         SpinDuration="1.5"/>
             <TextBlock Text="Did you know we can print labels at a speed of X per second?" TextWrapping="Wrap" Margin="0,10"/>
             <TextBlock Text="That Works." Margin="0,10"/>
-            <Button Command="{Binding NextCommand}" Content="Next" Margin="0,100,0,0"/>
+            <Button Command="{Binding NextCommandAsync}" Content="Next" Margin="0,100,0,0"/>
         </StackPanel>
     </Grid>
 </Page>
