--- a/Code/ShipWorks.Installer/Views/InstallShipworks.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallShipworks.xaml
@@ -5,7 +5,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:c="clr-namespace:ShipWorks.Installer.Controls"
     xmlns:fa5="http://schemas.fontawesome.com/icons/"
     Title="InstallShipworks"
     d:DesignHeight="300"
@@ -15,7 +14,6 @@
     <Grid>
         <StackPanel>
             <TextBlock Text="Installing ShipWorks..." />
-            <!--<c:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>-->
             <fa5:FontAwesome Icon="Solid_Spinner"
                          FontSize="40"
                          Foreground="#2A67AB" 
@@ -25,9 +23,10 @@
                          Margin="40,4,0,0"
                          Spin="True"
                          SpinDuration="1.5"/>
-            <TextBlock Text="Did you know we can print labels at a speed of X per second?" TextWrapping="Wrap" Margin="0,10"/>
-            <TextBlock Text="That Works." Margin="0,10"/>
-            <Button Command="{Binding NextCommandAsync}" Content="Next" Margin="0,100,0,0"/>
+            <TextBlock Text="Super fast label speed, automated inventory management, barcode scanning, batch processing...and that's just scratching the surface." 
+                       TextWrapping="Wrap" 
+                       Margin="0,10"/>
+            <TextBlock Text="It just Works." Margin="0,10"/>
         </StackPanel>
     </Grid>
 </Page>
