WORKS-105: Don't default to first db, fix next not enabling, and fire next on enter

--- a/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
@@ -96,7 +96,13 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10">
             <Button Style="{StaticResource SmallSecondaryButton}" Command="{Binding BackCommand}">Back</Button>
-            <Button Style="{StaticResource SmallPrimaryButton}" Command="{Binding NextCommand}" Margin="10,0,20,0" IsEnabled="{Binding NextEnabled}">Next</Button>
+            <Button Style="{StaticResource SmallPrimaryButton}" 
+                    Command="{Binding NextCommand}" 
+                    Margin="10,0,20,0" 
+                    IsEnabled="{Binding NextEnabled}"
+                    IsDefault="True">
+                Next
+            </Button>
             <Button Style="{StaticResource SmallSecondaryButton}">Cancel</Button>
         </StackPanel>
     </Grid>
