--- a/Code/ShipWorks.Installer/Views/Login.xaml
+++ b/Code/ShipWorks.Installer/Views/Login.xaml
@@ -41,7 +41,14 @@
         <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="2" Grid.Column="1" Text="Password" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <c:BindablePasswordBox Grid.Row="2" Grid.Column="2" Width="150" VerticalAlignment="Center" Password="{Binding Password, Mode=OneWayToSource}"/>
                 
-        <Button Style="{StaticResource SmallButton}" Grid.Column="2" Grid.Row="3" Command="{Binding NextCommandAsync}" Content="Sign In" HorizontalAlignment="Center" Width="150" Margin="0,10"/>
+        <Button Style="{StaticResource SmallButton}" 
+                Grid.Column="2" Grid.Row="3" 
+                Command="{Binding NextCommandAsync}" 
+                Content="Sign In" 
+                HorizontalAlignment="Center" 
+                Width="150" 
+                Margin="0,10"
+                IsDefault="True"/>
         
         <TextBlock Grid.Column="2" Grid.Row="4" HorizontalAlignment="Center">
             <Hyperlink Command="{Binding NoAccountCommand}">
