--- a/Code/ShipWorks.Installer/Views/MainWindow.xaml
+++ b/Code/ShipWorks.Installer/Views/MainWindow.xaml
@@ -18,14 +18,14 @@
     BorderBrush="LightGray"
     BorderThickness="0,1,0,0"
     Focusable="True"
-    MouseDown="Window_MouseDown">
+    MouseDown="Window_MouseDown" IsTabStop="False">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <converters:NavBarStateToVisibilityConverter x:Key="NavBarVisibilityConverter" />
     </Window.Resources>
 
-    <Grid Name="mainGrid" Focusable="True">
+    <Grid Name="mainGrid" Focusable="True" KeyboardNavigation.IsTabStop="False">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*"/>
@@ -49,7 +49,7 @@
                     <c:NavigationOption Text="- Install Database" Margin="20,0,0,0" Icon="{Binding Source={StaticResource Locator}, Path=MainViewModel.InstallDatabaseIcon}" Visibility="{Binding Path=NavBarState, Converter={StaticResource NavBarVisibilityConverter}, ConverterParameter={x:Static enums:NavBarState.NewInstall}}"/>
                     <c:NavigationOption Text="Use ShipWorks" Icon="{Binding Source={StaticResource Locator}, Path=MainViewModel.UseShipWorksIcon}"/>
                 </StackPanel>
-                <Button Style="{StaticResource SmallButton}" VerticalAlignment="Bottom" Margin="10" Command="{Binding HelpCommand}">Need Help? Contact Us</Button>
+                <Button Style="{StaticResource SmallButton}" VerticalAlignment="Bottom" Margin="10" Command="{Binding HelpCommand}" IsTabStop="False">Need Help? Contact Us</Button>
             </Grid>
         </Border>
         <TextBlock Style="{StaticResource Header}" Text="Install ShipWorks" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="20" Margin="0,10">
@@ -62,6 +62,6 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             NavigationUIVisibility="Hidden" 
-            Margin="10,50,10,0"/>
+            Margin="10,50,10,0" IsTabStop="False"/>
     </Grid>
 </Window>
