--- a/Code/ShipWorks.UI/Dialogs/QuickStart/QuickStart.xaml
+++ b/Code/ShipWorks.UI/Dialogs/QuickStart/QuickStart.xaml
@@ -4,6 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:attachedProperties="clr-namespace:ShipWorks.UI.AttachedProperties"
         mc:Ignorable="d"
         SizeToContent="Height"
         Width="1000"
@@ -17,6 +18,7 @@
                 <ResourceDictionary Source="/ShipWorks.UI;component/Icons/List.xaml"/>
                 <ResourceDictionary Source="/ShipWorks.UI;component/Icons/Management.xaml"/>
                 <ResourceDictionary Source="/ShipWorks.UI;component/Icons/Product.xaml"/>
+                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/ButtonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="{x:Type TextBlock}">
                 <Setter Property="FontSize" Value="18"/>
@@ -31,8 +33,11 @@
             <Style x:Key="Subheader" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
                 <Setter Property="HorizontalAlignment" Value="Center"/>
             </Style>
-            <Style x:Key="Link" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
+            <Style x:Key="Button" TargetType="{x:Type Button}" BasedOn="{StaticResource Link}">
                 <Setter Property="Foreground" Value="#0078d7"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="/ShipWorks.UI;component/Styles/BlueSteel/#Roboto"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
             <Style x:Key="Details" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
                 <Setter Property="TextWrapping" Value="Wrap"/>
@@ -89,46 +94,46 @@
             <Image Grid.Row="0" Grid.Column="0" Style="{StaticResource LargeImage}" Source="{StaticResource Store}" />
             <Image Grid.Row="0" Grid.Column="1" Style="{StaticResource LargeImage}" Source="{StaticResource Printer}" Margin="50 0 0 26" />
             <StackPanel Grid.Row="1" Grid.Column="0" Style="{StaticResource LeftSection}">
-                <TextBlock Text="Connect a Store" Style="{StaticResource Link}"/>
+                <Button Content="Connect a Store" Style="{StaticResource Button}" Margin="0 0 0 11" Click="OnClickAddStore"/>
                 <TextBlock Text="Add a new marketplace, file, or ODBC connection to import orders from." Style="{StaticResource Details}"/>
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="1" Style="{StaticResource RightSection}">
-                <TextBlock Text="Setup Default Printers" Style="{StaticResource Link}"/>
+                <Button Content="Setup Default Printers" Style="{StaticResource Button}" Margin="0 0 0 11"/>
                 <TextBlock Text="Setup your default thermal or standard printers to use with ShipWorks." Style="{StaticResource Details}"/>
             </StackPanel>
             <Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="-52 0 -52 35" Background="#dededd"/>
             <StackPanel Grid.Row="3" Grid.Column="0" Style="{StaticResource LeftSection}">
                 <StackPanel Style="{StaticResource SectionHeader}">
                     <Image Style="{StaticResource SmallImage}" Source="{StaticResource List}" />
-                    <TextBlock Text="Setup Automated Shipping Rules" Style="{StaticResource Link}"/>
+                    <Button Content="Setup Automated Shipping Rules" Style="{StaticResource Button}" Click="OnClickShippingRules"/>
                 </StackPanel>                
                 <TextBlock Text="Configure rules to ensure your shipments are processed with the correct settings every time." Style="{StaticResource Details}"/>
             </StackPanel>
             <StackPanel Grid.Row="3" Grid.Column="1" Style="{StaticResource RightSection}">
                 <StackPanel Style="{StaticResource SectionHeader}">
                     <Image Style="{StaticResource SmallImage}" Source="{StaticResource Product}" />
-                    <TextBlock Text="Create a Filter" Style="{StaticResource Link}"/>
+                    <Button Content="Create a Filter" Style="{StaticResource Button}" Click="OnClickFilters"/>
                 </StackPanel>
                 <TextBlock Text="Create a filter to find and display orders that meet criteria that you decide upon." Style="{StaticResource Details}"/>                
             </StackPanel>
             <StackPanel Grid.Row="4" Grid.Column="0" Style="{StaticResource LeftSection}">
                 <StackPanel Style="{StaticResource SectionHeader}">
                     <Image Style="{StaticResource SmallImage}" Source="{StaticResource Configuration}" />
-                    <TextBlock Text="Customize Templates" Style="{StaticResource Link}" />
+                    <Button Content="Customize Templates" Style="{StaticResource Button}" Click="OnClickTemplates"/>
                 </StackPanel>                
                 <TextBlock Text="Customize your templates to ensure proper formatting and brand placement." Style="{StaticResource Details}"/>
             </StackPanel>
             <StackPanel Grid.Row="4" Grid.Column="1" Style="{StaticResource RightSection}">                
                 <StackPanel Style="{StaticResource SectionHeader}">
                     <Image Style="{StaticResource SmallImage}" Source="{StaticResource Management}" VerticalAlignment="Center"/>
-                    <TextBlock Text="Setup Inventory Management" Style="{StaticResource Link}" VerticalAlignment="Center"/>
+                    <Button Content="Setup Inventory Management" Style="{StaticResource Button}" Click="OnClickInventory"/>
                 </StackPanel>
                 <TextBlock Text="Setup your inventory through The Hub to track product levels." Style="{StaticResource Details}"/>
             </StackPanel>
         </Grid>
         <TextBlock Grid.Row="2" Style="{StaticResource Subheader}" Margin="0 0 0 50">
             For additional information, visit our
-            <Hyperlink Foreground="#4a4a4a">knowledgebase</Hyperlink>
+            <Hyperlink Foreground="#4a4a4a" NavigateUri="https://support.shipworks.com/" attachedProperties:Link.OpenInBrowser="True">knowledgebase</Hyperlink>
         </TextBlock>          
     </Grid>
 </ui:InteropWindow>
