--- a/Code/ShipWorks.Installer/Views/UpgradeShipWorks.xaml
+++ b/Code/ShipWorks.Installer/Views/UpgradeShipWorks.xaml
@@ -23,9 +23,10 @@
                          Margin="40,4,0,0"
                          Spin="True"
                          SpinDuration="1.5"/>
-            <TextBlock Text="Did you know we can print labels at a speed of X per second?" TextWrapping="Wrap" Margin="0,10"/>
-            <TextBlock Text="That Works." Margin="0,10"/>
-            <Button Command="{Binding NextCommandAsync}" Content="Next" Margin="0,100,0,0"/>
+            <TextBlock Text="Super fast label speed, automated inventory management, barcode scanning, batch processing...and that's just scratching the surface." 
+                       TextWrapping="Wrap" 
+                       Margin="0,10"/>
+            <TextBlock Text="It just Works." Margin="0,10"/>
         </StackPanel>
     </Grid>
 </Page>
